# pfactory

./: .#Parallel.cc  .gitignore  .travis.yml  AUTHORS  ChangeLog  Communicators.cc  Communicators.h  DL_-_pfactory.docx  LICENSE  Parallel.cc  Parallel.h  README.md  bootstrap  configure.ac  makefile  sonar-project.properties
build-wrapper-linux-x86/: build-wrapper-linux-x86-64
examples/: Makefile.am  tests.sh
examples/barrier/: Barrier.cc  Makefile.am
examples/communication/: Communication.cc  communication  makefile  makefile~
examples/communication1/: Communication.cc
examples/communication2/: Communication.cc  Makefile.am
examples/communicator/: Communicator.cc  Makefile.am  communication
examples/concurrent/: Concurrent.cc  Makefile.am
examples/display/: Display.cc  Makefile.am  display
examples/dynamicDC/: DynamicDC.cc  Makefile.am
examples/helloworld/: Helloworld.cc  Makefile.am  helloworld
examples/intercommunicator/: Intercommunicator.cc  Makefile.am
examples/multipleconcurrents/: Makefile.am  Multipleconcurrents.cc
examples/restrictedcommunicator/: Makefile.am  Restrictedcommunicator.cc  communication
examples/safeQueue/: Makefile.am  SafeQueue.cc  makefile  safeQueue
examples/staticDC/: Makefile.am  StaticDC.cc
experiments/: README.md  cp.md  sat.md
include/: Barrier.h  Communicators.h  Controller.h  Enum.h  Groups.h  Intercommunicators.h  Safestd.h  Starter.h  Task.h  Winner.h  pFactory.h
src/: Barrier.h  Communicators.cc  Communicators.h  Controller.cc  Groups.cc  Makefile.am  pFactory.cc  pFactory.h
