AC_PREREQ(2.59)
AC_INIT(pFactory, 3.0, szczepanski.nicolas@gmail.com)

PACKAGE=pFactory
VERSION=0.1

AC_CONFIG_AUX_DIR([config])
AC_CONFIG_HEADER([src/config.h])

AM_INIT_AUTOMAKE(subdir-objects)

AC_PROG_CC
dnl : ${CXXFLAGS= -std=c++11 -O3}
AC_PROG_CXX

AC_PROG_RANLIB

AC_OUTPUT(Makefile src/Makefile)

