AM_CPPFLAGS = -Wall -Wextra -Werror -std=c++11

noinst_LIBRARIES = $(top_builddir)/lib/libpFactory.a

__top_builddir__lib_libpFactory_a_SOURCES = pFactory.cc Controller.cc $(top_builddir)/include/Controller.h $(top_builddir)/include/Barrier.h $(top_builddir)/include/Communicators.h $(top_builddir)/include/Intercommunicators.h Groups.cc $(top_builddir)/include/Groups.h $(top_builddir)/include/Task.h $(top_builddir)/include/Safestd.h $(top_builddir)/include/pFactory.h

